--- a/index.html
+++ b/index.html
@@ -3,60 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbots in Ecommerce - The Future of Online Shopping</title>
-    <meta name="description" content="Explore how AI chatbots are revolutionizing ecommerce with 24/7 support, personalized recommendations, and improved customer experience">
+    <title>GPT Chatbots: Future of Customer Support</title>
+    <meta name="description" content="Complete guide to building GPT-powered chatbots for customer support with AI">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="fade-in">
-        <h1>🤖 Chatbots: Revolutionizing Ecommerce</h1>
+    <header>
+        <h1>GPT-Based Chatbots: The Future of Customer Support</h1>
+        <div class="meta">
+            <span class="author">By [Your Name]</span>
+            <span class="date">September 2023</span>
+        </div>
     </header>
 
-    <main>
-        <section class="content-section slide-in-left">
-            <h2>Why Chatbots Matter in Ecommerce</h2>
-            <div class="card">
-                <p>Modern consumers demand instant responses and personalized experiences. AI chatbots provide:</p>
-                <ul>
-                    <li>24/7 customer support</li>
-                    <li>Instant product recommendations</li>
-                    <li>Order tracking updates</li>
-                    <li>Personalized shopping experiences</li>
-                </ul>
-            </div>
+    <article class="blog-content">
+        <!-- Blog sections here -->
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <p>GPT-based chatbots are transforming customer service...</p>
         </section>
 
-        <section class="content-section slide-in-right">
-            <h2>Key Benefits</h2>
-            <div class="benefits-grid">
-                <div class="benefit-card">
-                    <h3>💰 Increased Sales</h3>
-                    <p>Upsell/cross-sell through smart suggestions</p>
-                </div>
-                <div class="benefit-card">
-                    <h3>⏱ 24/7 Availability</h3>
-                    <p>Instant responses at any time</p>
-                </div>
-                <div class="benefit-card">
-                    <h3>📈 Valuable Insights</h3>
-                    <p>Collect customer data for better decisions</p>
+        <!-- Add more sections following your outline -->
+
+        <!-- Chatbot Demo Section -->
+        <section class="chatbot-demo">
+            <h2>Live Chatbot Demo</h2>
+            <div class="chat-container">
+                <div class="chat-window" id="chatWindow"></div>
+                <div class="input-container">
+                    <input type="text" id="userInput" placeholder="Ask me anything...">
+                    <button onclick="sendMessage()">Send</button>
                 </div>
             </div>
         </section>
-
-        <section class="animated-chatbot">
-            <div class="chatbot-container">
-                <div class="chatbot" id="animatedBot">
-                    <div class="chatbot-eye left-eye"></div>
-                    <div class="chatbot-eye right-eye"></div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="fade-in">
-        <p>© 2023 Ecommerce Chatbot Blog. Hosted on GitHub</p>
-    </footer>
+    </article>
 
     <script src="animations.js"></script>
 </body>
