--- a/index.html
+++ b/index.html
@@ -4,39 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPT Chatbots: Future of Customer Support</title>
-    <meta name="description" content="Complete guide to building GPT-powered chatbots for customer support with AI">
+    <meta name="description" content="Complete guide to GPT-based chatbots for customer service">
+    <meta name="keywords" content="AI Chatbot, GPT-3, Customer Support, OpenAI">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="blog-header">
         <h1>GPT-Based Chatbots: The Future of Customer Support</h1>
         <div class="meta">
-            <span class="author">By [Your Name]</span>
+            <span class="author">By AI Developer</span>
             <span class="date">September 2023</span>
         </div>
     </header>
 
-    <article class="blog-content">
-        <!-- Blog sections here -->
-        <section id="introduction">
-            <h2>Introduction</h2>
-            <p>GPT-based chatbots are transforming customer service...</p>
+    <main class="blog-content">
+        <!-- Introduction Section -->
+        <section class="blog-section">
+            <h2>What Are GPT-Based Chatbots?</h2>
+            <p>GPT (Generative Pre-trained Transformer) chatbots are AI systems that...</p>
+            <div class="diagram-placeholder"></div>
         </section>
 
-        <!-- Add more sections following your outline -->
+        <!-- How They Work Section -->
+        <section class="blog-section">
+            <h2>How GPT Chatbots Work</h2>
+            <pre><code class="python"># Sample Python code
+response = openai.ChatCompletion.create(
+  model="gpt-3.5-turbo",
+  messages=[{"role": "user", "content": "Hello!"}]
+)</code></pre>
+            <div class="workflow-diagram"></div>
+        </section>
 
-        <!-- Chatbot Demo Section -->
+        <!-- Live Chatbot Demo -->
         <section class="chatbot-demo">
-            <h2>Live Chatbot Demo</h2>
+            <h2>Try Our Demo Chatbot</h2>
             <div class="chat-container">
                 <div class="chat-window" id="chatWindow"></div>
                 <div class="input-container">
-                    <input type="text" id="userInput" placeholder="Ask me anything...">
+                    <input type="text" id="userInput" placeholder="Type your message...">
                     <button onclick="sendMessage()">Send</button>
                 </div>
             </div>
         </section>
-    </article>
+
+        <!-- GitHub Section -->
+        <section class="blog-section">
+            <h2>Get the Code</h2>
+            <pre><code class="bash">git clone https://github.com/yourusername/chatbot-blog.git</code></pre>
+            <div class="repo-structure">
+                <div class="file">index.html</div>
+                <div class="file">styles.css</div>
+                <div class="file">animations.js</div>
+            </div>
+        </section>
+    </main>
 
     <script src="animations.js"></script>
 </body>
