--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ trainer.train()</code></pre>
             </ol>
             <p>This chatbot efficiently automates responses, reducing manual effort and improving the user experience for students, faculty, and visitors seeking information about admissions, courses, events, and more at PCCOE.</p>
             <figure>
-                <img src="https://github.com/SAURABH11072004/ecommerce-chatbot-blog/blob/main/378881352-03f73420-1cdf-4127-81b6-d092a407a9b5.png" alt="GPT-Based Chatbot Workflow Diagram" style="max-width: 100%; height: auto;">
+                <img src="workflow-image.png" alt="GPT-Based Chatbot Workflow Diagram" style="max-width: 100%; height: auto;">
                 <figcaption>Figure 1: Workflow diagram of a GPT-based chatbot in Botpress, showing the sequence from Start to End with web search, knowledge base querying, and AI-generated text.</figcaption>
             </figure>
             <p><a href="https://pccoepuneakurdibot.tiiny.site/" target="_blank">Link to PCCOE Chatbot</a></p>
