--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@ trainer.train()</code></pre>
                 <li><strong>Standard Node 2:</strong> Uses AI-generated text if no direct answer is found.</li>
                 <li><strong>End Node:</strong> Completes the conversation.</li>
             </ol>
+            <!-- Adding the image here -->
+            <figure>
+                <img src="https://ibb.co/Wv61MkFJ" alt="GPT-Based Chatbot Workflow Diagram" style="max-width: 100%; height: auto;">
+                <figcaption>Figure 1: Workflow diagram of a GPT-based chatbot in Botpress, showing the sequence from Start to End with web search, knowledge base querying, and AI-generated text.</figcaption>
+            </figure>
             <h3>PCCOE Chatbot - Intelligent Query Assistant</h3>
             <p>The PCCOE Chatbot is an AI-driven virtual assistant designed to provide instant responses to queries related to Pimpri Chinchwad College of Engineering (PCCOE). The chatbot follows a structured workflow, integrating web search, knowledge base querying, and AI-generated responses to ensure users receive the most relevant and accurate information.</p>
             <h4>Workflow Overview</h4>
@@ -154,10 +159,6 @@ trainer.train()</code></pre>
                 <li><strong>End Node:</strong> Completes the interaction with the user.</li>
             </ol>
             <p>This chatbot efficiently automates responses, reducing manual effort and improving the user experience for students, faculty, and visitors seeking information about admissions, courses, events, and more at PCCOE.</p>
-            <figure>
-                <img src="workflow-image.png" alt="GPT-Based Chatbot Workflow Diagram" style="max-width: 100%; height: auto;">
-                <figcaption>Figure 1: Workflow diagram of a GPT-based chatbot in Botpress, showing the sequence from Start to End with web search, knowledge base querying, and AI-generated text.</figcaption>
-            </figure>
             <p><a href="https://pccoepuneakurdibot.tiiny.site/" target="_blank">Link to PCCOE Chatbot</a></p>
         </section>
 
