--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ trainer.train()</code></pre>
             </ol>
             <!-- Adding the image here -->
             <figure>
-                <img src="https://ibb.co/Wv61MkFJ" alt="GPT-Based Chatbot Workflow Diagram" style="max-width: 100%; height: auto;">
+                <img src="https://sigmawire.net/i/03/dESVZN.png" alt="GPT-Based Chatbot Workflow Diagram" style="max-width: 100%; height: auto;">
                 <figcaption>Figure 1: Workflow diagram of a GPT-based chatbot in Botpress, showing the sequence from Start to End with web search, knowledge base querying, and AI-generated text.</figcaption>
             </figure>
             <h3>PCCOE Chatbot - Intelligent Query Assistant</h3>
